kubernetes/zookeeper-kafka.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper-sts
spec:
  replicas: 1
  serviceName: zookeeper-svc
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: bitnami/zookeeper
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-svc
spec:
  selector:
    app: zookeeper
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-sts
spec:
  replicas: 1
  serviceName: kafka-svc
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka
          ports:
            - containerPort: 9092
            - containerPort: 9093
          volumeMounts:
            - name: kafka-pv
              mountPath: /var/lib/kafka/data
      volumes:
        - name: kafka-pv
          persistentVolumeClaim:
            claimName: kafka-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-svc
spec:
  selector:
    app: kafka
  ports:
    - name: client
      port: 9092
      targetPort: 9092
    - name: external
      port: 9093
      targetPort: 9093
