kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth
  annotations:
    nginx.ingress.kubernetes.io/auth-url: http://auth-app-svc.default.svc.cluster.local:8010/api/auth
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
spec:
  ingressClassName: nginx
  rules:
   - http:
       paths:
         - pathType: Prefix
           path: /api/statistics
           backend:
             service:
               name: statistics-app-svc
               port:
                 number: 9000
         - pathType: Prefix
           path: /api/users
           backend:
             service:
               name: auth-app-svc
               port:
                 number: 8010
         - pathType: Prefix
           path: /api/auth
           backend:
             service:
               name: auth-app-svc
               port:
                 number: 8010
         - pathType: Prefix
           path: /
           backend:
             service:
               name: core-app-svc
               port:
                 number: 8000
